tests/NormalTests/paczka2/big_fuzzy/56310020.err
Error in line 1: yR8Qr A24 51,4
Error in line 9: hGm22a A854 23,9
Error in line 5: yFz2J A133 20,3
Error in line 12: hGm22a A24 27,3
Error in line 15: hGm22a A957 99,8
Error in line 21: yFz2J A957 204,0
Error in line 45: b77Oh A133 24,2
Error in line 56: zYc4uMK3x A133 56,9
Error in line 61: zYc4uMK3x A133 18,8
Error in line 95: b77Oh A133 42,0
Error in line 71: yR8Qr A957 42,0
Error in line 99: yFz2J A133 QQ,6
Error in line 100: yFz2J A133 218,21
Error in line 101: hGm22a A24 42,5
Error in line 105: hGm22a A133 54,6
Error in line 108: zYc4uMK3x A854 83,4
Error in line 124: b77Oh A854 83,0
Error in line 126: yR8Qr A854 40,0
Error in line 133: hrTioOAC A957 76,8
Error in line 137: hGm22a A957 12,4
Error in line 145: hGm22a A133 96,3
Error in line 144: b77Oh A24 45,3
Error in line 154: zYc4uMK3x A24 9,9
Error in line 166: zYc4uMK3x A24 -1,2
Error in line 157: hrTioOAC A854 247,2
Error in line 171: yR8Qr A24 70,0
Error in line 169: hrTioOAC A133 22,7
Error in line 176: hrTioOAC A957 75,6
Error in line 161: zYc4uMK3x A24 80,2
Error in line 189: hGm22a A24 21,4
Error in line 183: zYc4uMK3x A133 62,4
Error in line 212: yFz2J A24 92,7
Error in line 214: hGm22a A133 62,9
Error in line 218: A854 A24 43,85
Error in line 215: yFz2J A133 13,8
Error in line 224: yR8Qr A854 68,7
Error in line 223: yFz2J A957 81,3
Error in line 226: hGm22a A157 53,0
Error in line 228: yR8Qr A24 18,7
Error in line 233: zYc4uMK3x A957 39,2
Error in line 235: zYc4uMK3x A24 92,4
Error in line 240: yR8Qr A854 25,8
Error in line 227: A854 A24 112,7
Error in line 244: A854 A854 58,4
Error in line 239: hrTioOAC A133 67,0
Error in line 247: hrTioOAC A24 18,8
